@@ -1,5 +1,10 @@
 2014-06-01  Miguel de Dios <miguel.dedios@artica.es>
 	
+	* general/news_dialog.php: fixed the empty list of news in the first
+	login.
+
+2014-06-01  Miguel de Dios <miguel.dedios@artica.es>
+	
 	* pandoradb_data.sql: fixed the insertion data of tnews, the lost
 	columns.
 
